# VMware-VKS

./: .gitignore  Dockerfile  LICENSE  README-CN.md  README.md  RELEASE_NOTES.md  SECURITY.md  config.example.yaml  docker-compose.yml  pyproject.toml  server.json  smithery.yaml
docs/plans/: 2026-03-25-vmware-vks-design.md  2026-03-25-vmware-vks-implementation.md
examples/mcp-configs/: README.md  continue.yaml  cursor.json  goose.json  localcowork.json  mcp-agent.yaml  vscode-copilot.json
mcp_server/: server.py
skills/vmware-vks/: SKILL.md
skills/vmware-vks/references/: agent-guardrails.md  capabilities.md  cli-reference.md  setup-guide.md
tests/: test_audit.py  test_config.py  test_connection.py  test_harbor.py  test_init_and_onboarding.py  test_kubeconfig.py  test_namespace.py  test_no_destructive_ops.py  test_preflight_auth.py  test_safe_error_passthrough.py  test_storage.py  test_supervisor.py  test_tkc.py  test_wcp_login.py
tests/eval/capability/: _family.py  _scores.json  _scoring.py  _skill.py  conftest.py  test_entity_reachability.py  test_error_actionability.py  test_tool_description_quality.py  test_tool_manifest_budget.py
tests/eval/regression/: test_capability_grader.py  test_cli_writes_guarded.py  test_declared_environment.py  test_deprecated_key_aliases.py  test_env_secret_obfuscation.py  test_fixpack_regressions.py  test_list_scaling.py  test_read_only_mode.py  test_release_blockers.py  test_result_envelope.py  test_session_probe_eviction.py  test_vim_attribute_conformance.py  test_vks_specific.py
vmware_vks/: __init__.py  cli.py  config.py  connection.py  doctor.py  errors.py  init_wizard.py  k8s_connection.py  preflight_auth.py  wcp_login.py
vmware_vks/mcp_server/: __main__.py  server.py
vmware_vks/notify/: audit.py
vmware_vks/ops/: harbor.py  kubeconfig.py  namespace.py  storage.py  supervisor.py  tkc.py
