[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vmware-vks"
version = "1.8.3"
description = "MCP Skill + CLI for managing vSphere with Tanzu (VKS) — Supervisor, Namespaces, and TanzuKubernetesCluster lifecycle"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Wei Zhou", email = "wei-wz.zhou@broadcom.com" }]
dependencies = [
    "pyvmomi>=8.0.3.0,<10.0",
    "kubernetes>=29.0,<35.0",
    "pyaml>=24.0,<27.0",
    "typer>=0.12,<1.0",
    "rich>=13.0,<15.0",
    "python-dotenv>=1.0,<2.0",
    "mcp[cli]>=1.10,<2.0",
    "vmware-policy>=1.8.1,<2.0",
]

[project.scripts]
vmware-vks = "vmware_vks.cli:app"
vmware-vks-mcp = "vmware_vks.mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["vmware_vks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "capability: Capability evals — scored trends, not pass/fail gates. Excluded from the default run (they measure quality, so <100% is expected and must not read as a broken build). Run them with: pytest -m capability",
]
addopts = "-m 'not capability'"
[dependency-groups]
dev = [
    "pytest>=8.0,<10.0",
    "pytest-cov>=5.0,<8.0",
    "ruff>=0.5,<1.0",
]
